[package]
name = "fsd_interface"
version = "0.3.1"
edition = "2024"
authors = ["Caspian Merlin <chpmerlin@gmail.com>"]
description = "A Rust crate for serialising and deserialising FSD (Flight Simulator Daeomon) protocol network messages"
readme = "README.md"
repository = "https://github.com/azimuth-radar/fsd-interface"
homepage = "https://github.com/azimuth-radar/fsd-interface"
license = "BSD-3-Clause"
keywords = ["flightsim", "fsd", "vatsim", "flight_simulation"]
categories = ["parsing", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.18"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = "0.4.38"
tracing = "0.1.41"
